# Priority: Critical
# Test ID: C999001
# Title: Navigate to Receive scene and verify addresses
# Note: iOS version cannot swipe (Maestro limitation)

appId: ${MAESTRO_APP_ID}
tags:
- all
- C999001
---
- runFlow:
    file: ../common/launch-cleared.yaml
- runFlow:
    file: ../common/login-password.yaml
    env:
      USERNAME: ${MAESTRO_EDGE_UTXO_USERNAME}
      PASSWORD: ${MAESTRO_EDGE_UTXO_PASSWORD}

- runFlow:
    file: ../common/dismiss-modals.yaml

- tapOn: Assets
- extendedWaitUntil:
    visible: "DGB.*"
    timeout: 15000
- tapOn: "DGB.*"
- extendedWaitUntil:
    visible: 18.79649375 DGB
    timeout: 15000
- tapOn: Receive

- assertVisible: "You have 18.796493 DGB"
- assertVisible: "Receive to My DigiByte"
- assertVisible: "Your Segwit Address"
- assertVisible: "dgb1quxmpr34muutkgjuqwcssj4cz07hpukqsr4c3d8"
- swipe:
    start: "70%, 50%"
    end: "5%, 50%"
# - assertVisible: "Your Wrapped-Segwit Address"
# - assertVisible: "SW5aFhYyDwhKA511bfj8FvHR2AjgDGqPUH"
- swipe:
    start: "70%, 50%"
    end: "5%, 50%"
- assertVisible: "Your Legacy Address"
- assertVisible: "3AUb9QGG3UpVivuzBLQe8eVnWuny12caXU"

- assertVisible: "FIO Request"
- assertVisible: "Copy"
- assertVisible: "Share"

- stopApp

