# Creates a new account
# - Optionally tests password requirements
# - Accepts a passed-in password and PIN (with fallback)
# - Generates a random username and saves it to the environment variable `output.newAccountUsername`
# - Optionally dismisses web3 handle modal after account creation
# - Verifies account details are displayed after account creation

appId: ${MAESTRO_APP_ID}
env:
    NEW_ACCOUNT_PASSWORD: ${NEW_ACCOUNT_PASSWORD || MAESTRO_EDGE_NEW_ACCOUNT_PASSWORD}
    NEW_ACCOUNT_PIN: ${NEW_ACCOUNT_PIN || MAESTRO_EDGE_NEW_ACCOUNT_PIN}
    NEW_WALLETS: ${NEW_WALLETS || ""}
    DEFAULT_WALLETS: '["Bitcoin", "Ethereum", "Litecoin", "Bitcoin Cash", "Dash"]'
---
# Start account creation flow
# # In case of retries -
# - runFlow:
#     when:
#       notVisible: "Already have an account? Sign in"
#     commands:
#       - runFlow:
#           file: ../common/launch-cleared.yaml


- tapOn: Already have an account? Sign in
- waitForAnimationToEnd:
    timeout: 10000
- tapOn: Create account
# Captcha
- assertVisible:
    text: "Are you a human?"
    optional: true
- assertVisible:
    text: ".*ALTCHA.*"
    optional: true
- assertVisible: Choose Username
- assertVisible: "Your username will be required.*"

# Enter and save username
# Wait for altcha to complete
- waitForAnimationToEnd:
    timeout: 10000
- extendedWaitUntil:
    visible: Next
    timeout: 10000

# Enter new account username
# - tapOn:
#     id: "undefined.clearIcon"
# - tapOn: Username
- inputRandomText
- copyTextFrom:
    id: "undefined.textInput"
- evalScript: ${output.newAccountUsername = maestro.copiedText}
- waitForAnimationToEnd:
    timeout: 10000
- assertVisible: Username available

# Continue
- assertVisible: Next
- pressKey: 
    key: Enter

# Test password requirements
- runFlow:
    when: 
      true: ${MAESTRO_CHECK_PASS_REQ}
    file: ../common/password-requirements.yaml
    label: "Test password requirements on account creation"

# Enter password
- tapOn: Password
- inputText: ${NEW_ACCOUNT_PASSWORD}
- pressKey: 
    key: Enter
- inputText: ${NEW_ACCOUNT_PASSWORD}
- evalScript: ${output.newAccountPassword = NEW_ACCOUNT_PASSWORD}
- pressKey:
    key: Enter

# Set PIN
# Use the per-flow PIN (or the default declared above).
- assertVisible: Set PIN
- inputText: ${NEW_ACCOUNT_PIN}
- tapOn: Next

# Confirm TOS
- tapOn: "I understand that my funds are held securely on this device, not by Edge"
- tapOn: "I understand that if I lose this device or uninstall the app, my digital assets can only be recovered with my username and password"
- tapOn: "I understand that if I lose my username and password, Edge will not be able to recover my account, unless I set up password recovery"
- tapOn: "I understand that I am responsible for safekeeping of my passwords, private key pairs, PIN, and any other codes to access the software. Edge is not responsible if my information is compromised or accessed by a 3rd party where funds are lost"
- waitForAnimationToEnd
- assertVisible: "I have read, understood, and agree to the Terms of Use"
- tapOn: "Confirm"

# Creating account screen
- assertVisible: "Great Job!"
- assertVisible: "Hang tight while we create.*"

# Create button fades in - may encounter captcha
- extendedWaitUntil:
    visible: ${"View account information.*"}
    timeout: 45000
- assertVisible: "Tap the dropdown below to review your account information"
- assertVisible: "Warning!.*"
- assertVisible: "If you lose your account information.*"
# Dropdown correct
- tapOn: ${"View account information.*"}
- assertVisible: "Username:"
- assertVisible: ${output.newAccountUsername}
- assertVisible: "Password:"
- assertVisible: ${NEW_ACCOUNT_PASSWORD}
- assertVisible: "PIN:"
- assertVisible: ${NEW_ACCOUNT_PIN}
- tapOn: "Create"

# If the request notifications modal show with "Security is Our Priority" then cancel it
## Currently appears before wallets are created (iOS only)
- extendedWaitUntil:
    visible: "Security is Our Priority"
    timeout: 5000
    optional: true
    label: "Request notifications modal (iOS only)"
- tapOn:
    text: "Cancel"
    optional: true
    
# Toggle on wallets here 
- runFlow:
    when: 
      true: ${NEW_WALLETS}
    commands:
      # Remove default wallets
      - evalScript: ${output.wallets = JSON.parse(NEW_WALLETS)}
      - evalScript: ${output.defaults = JSON.parse(DEFAULT_WALLETS)}
      - evalScript: ${output.filteredDefaults = output.defaults.filter(d => !output.wallets.includes(d))}
      - evalScript: ${output.filteredWallets = output.wallets.filter(w => !output.defaults.includes(w))}
      - evalScript: ${output.defIndex = 0}
      - repeat:
          times: ${output.filteredDefaults.length}
          commands:
            - tapOn: ${".*" + output.filteredDefaults[output.defIndex]}
            - evalScript: ${output.defIndex++}
      # Add new wallets
      - evalScript: ${output.newIndex = 0}
      - repeat:
          times: ${output.filteredWallets.length}
          commands:
            - tapOn: Search Wallets
            - tapOn:
                id: "undefined.clearIcon"
            - inputText: ${output.filteredWallets[output.newIndex]}
            - tapOn:
                text: ${".*" + output.filteredWallets[output.newIndex]}
                index: 1
            - evalScript: ${output.newIndex++}

- tapOn:
    id: "nextButton"
