# Launches the app with a cleared cache, and waits for the Edge logo to appear.
appId: ${MAESTRO_APP_ID}
---
# If the request notifications modal show with "Security is Our Priority"
# Cancel it
- extendedWaitUntil:
    visible: "Security is Our Priority"
    timeout: 15000
    optional: true
- tapOn:
    text: "Cancel"
    optional: true

# If the survey modal shows, dismiss it
- extendedWaitUntil:
    visible: "How Did You Discover Edge?"
    timeout: 5000
    optional: true
- tapOn:
    text: "Dismiss"
    optional: true

# If the Web3 Handle modal shows, dismiss it
- runFlow:
    when:
      visible: "Claim Your Web3 Handle"
    commands:
      - tapOn:
          text: "Not Now"
    label: "Dismiss Web3 Handle Modal"

# If the enable 2FA notification shows, dismiss it
- swipe:
   from: 
     id: "notifOtp" 
   direction: LEFT 
   optional: true

# If the IP validation notification shows, dismiss it
- swipe:
   from: 
     id: "notifIp2Fa" 
   direction: LEFT 
   optional: true

# If the password reminder notificationshows, dismiss it
- swipe:
   from: 
     id: "notifPassword" 
   direction: LEFT 
   optional: true

    