# Login with password

appId: ${MAESTRO_APP_ID}
---
- tapOn: "Already have an account? Sign in"
- tapOn:
    id: "usernameFormField"
- inputText: ${USERNAME}
- tapOn:
    id: "passwordFormField"
- inputText: ${PASSWORD}
- hideKeyboard
- pressKey: Enter
